--- a/jux-does-tech/package.json
+++ b/jux-does-tech/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.1.1",
+    "@react-spring/web": "^9.1.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-feed": "^3.2.0",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
