--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install -g gatsby-cli
+      - run: npm install -g gatsby-cli@4
       - name: Build it
         working-directory: ./jux-does-tech
         run: npm run build
